clusters/homelab/network/cloudflare-tunnel/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cloudflare-tunnel
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-probes
  namespace: cloudflare-tunnel
spec:
  podSelector:
    matchLabels:
      pod: cloudflared
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.10.10.0/24
      ports:
        - port: 2000
          protocol: TCP
